force-app/main/default/objects/Achievements__c/Achievements__c.object-meta.xml
<CustomObject>
    <label>Achievements</label>
    <nameField>
        <displayFormat>ACH-{00000}</displayFormat>
        <label>Achievements</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>