force-app/main/default/objects/Achievements__c/fields/Achievement_Id__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Id__c</fullName>
    <displayFormat>ACH-{000000}</displayFormat>
    <label>Achievement Id</label>
    <type>AutoNumber</type>
</CustomField>