force-app/main/default/objects/Achievements__c/fields/Achievement_Title__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Title__c</fullName>
    <label>Achievement Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>