force-app/main/default/objects/Achievements__c/fields/Any_Other_Achievements__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Achievements__c</fullName>
    <label>Any Other Achievements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>