force-app/main/default/objects/Achievements__c/fields/Applicant_Proposal_Association__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Proposal_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Proposal Association</label>
    <referenceTo>Applicant_Proposal_Association__c</referenceTo>
    <relationshipLabel>Achievements</relationshipLabel>
    <relationshipName>Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>